--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,800;1,700;1,900&display=swap" rel="stylesheet">
     <link href="indexcomic.css" rel="stylesheet">
-    <title>Unsual 3D print Tutorial</title>
+    <title>Unusual 3D print Tutorial</title>
 </head>
 <body>
         <div class="divcontainermain">
-            <h1>Unsual 3D Print Tutorial</h1>
+            <h1>Unusual 3D Print Tutorial</h1>
         <div class="grid-container">
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (0).jpg" alt="">
@@ -43,17 +43,17 @@
             </div>  
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (6).jpg" alt="">
-                <p>Now, is our time Lex Luthor!</p>
+                <p>This is our time, Lex Luthor!</p>
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (8).jpg" alt="">
-                <p>I'm sorry to disappoint you, guys. <br> I was not talking about you, but real villains that live inside the 3D printing world. <br> In fact, you guys, don't exist in my alternative reality.</p>
+                <p>I'm sorry to disappoint you, guys. <br> I was not talking about you, but the real villains that live inside the 3D printing world. <br> You guys, don't exist in my alternative reality.</p>
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (9).jpg" alt="">
                 <p>
-                    That was embarrassing Luthor! <br>
-                    Don't worry Joker. Let's drink something, I'll pay.
+                    That was embarrassing, Luthor! <br>
+                    Don't worry, Joker. Let's drink something, I'll pay.
                 </p>
             </div>
             <div class="grid-item">
@@ -63,7 +63,7 @@
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (12).jpg" alt="">
-                Thank you Sup!
+                Thank you, Sup!
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (13).jpg" alt="">
@@ -73,12 +73,12 @@
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (14).jpg" alt="">
-                <p>With small square verify each corner. The square must to touch both surfaces to assure 90 degrees.</p>
+                <p>With a small square verify each corner. The square must touch both surfaces to assure 90 degrees.</p>
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (15).jpg" alt="">
-                <p>Even de upper corners must to be checked.
-                    <br> This verification is the most important. All parts in machine are attached to frame or chassis, one misalignment means all parts misaligned, that means mess.
+                <p>Even de upper corners must be checked.
+                    <br>This verification is the most important. All machine parts are attached to the frame or chassis. If the chassis is misaligned it means that all the parts are misaligned too and it means mess.
                     <br> Here, all corners are ok!
                 </p>
 
@@ -86,39 +86,39 @@
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (13).jpg" alt="">
                 <p>Next dangerous villain:
-                    <br>*Loose<br>
-                    After misaligned Chassis, loose is the worse villain and easier to eliminate.
+                    <br>*Looseness<br>
+                    After misaligned chassis, looseness is the worse villain, although the easiest to eliminate.
                 </p>
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (27).jpg" alt="">
-                <p>With your hand, try to move up and down the axis X carriage, if you feel loose, means that Axis Z is loose.
-                    <br>Axis Z loose doesn't allow to move parallel X carriage to print bed.
+                <p>With your hand, try to move up and down the axis X carriage. If you feel it is loose, it means that Axis Z is loose.
+                    <br>Axis Z looseness does not allow a parallel movement X carriage to print bed.
                 </p>
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (16).jpg" alt="">
-                <p>To solve this, tight all eccentric nuts to adjust Z vslots.
-                    <br> Vslots are simple parts with bearings that running within chassis profiles. To tighten you must to move the tool in clockwise and to release counter-clockwise.
+                <p>To solve this, tight all eccentric nuts to adjust Z V slots.
+                    <br>V slots are simple parts with bearings that run within chassis profiles. To tighten them you must move the tool clockwise and release counter-clockwise.
                 </p>
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (26).jpg" alt="">
-                <p>With you hand try to move clockwise and counter-clockwise the hotend carriage.
-                    <br> If It's loose, means that 3D printing looks like shaking, loosing precision and details.
+                <p>With your hand try to move clockwise and counter-clockwise the hotend carriage.
+                    <br> If it may be shaking, it means that 3D printing looks like shaking, losing precision and details.
                 </p>
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (17).jpg" alt="">
-                Tight the eccentric nuts in vslots to adjust hot end carriage.
+                Tight the eccentric nuts in V slots to adjust hot end carriage.
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (28).jpg" alt="">
-                <p>With your hand move slowly up and down and clockwise. If you feel loose, means the bed print carriage is not pushing and pulling the right way the axis Y</p>
+                <p>With your hand move slowly up, down, and clockwise. If you feel it may be shaking, it means the bed print carriage is not pushing and pulling the right way the axis Y.</p>
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (18).jpg" alt="">
-                <p>Under bed print there are two vlost, you must to adjust the eccentric nuts the same way that you done in axis Z or hotend carriage.</p>
+                <p>Under the bed print there are two V lost, you must to adjust the eccentric nuts the same way that you done in axis Z or hot end carriage.</p>
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (19).jpg" alt="">
@@ -129,19 +129,18 @@
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (20).jpg" alt="">
-                <p>Every time that you clean up your house, lots of dust are spread through the air.
-                    <br> This dust settles in you furniture, in you 3D printer and your 3D print filament.
+                <p>Every time you clean up your house, lots of dust is spread through the air.
+                    <br> This dust settles in your furniture, in your 3D printer, and your 3D print filament.
                     <br>Before each use, clean all possible parts of 3D print with a soft brush, removing all visible dust.
-                    <br>For 3d print filament, there are lot of models of filters available in the internet to print. That certainly is a good update for your machine.
-                </p>
+                    <br>For 3d print filament, there are many models of filters available on the internet to print. That certainly is a good update for your machine.</p>
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (21).jpg" alt="">
-                This is not a villain, but after some time can become one:<br>
+                This is not a villain, but after some time it can become one:<br>
                 *The Nozzle.<br>
-                If you print lots of pieces in a month, its recommendable to change the nozzle every month. This cheap part will keep you away from a good headache.<br>
+                If you print lots of pieces in a month, it's recommended to change the nozzle every month. This cheap part will keep you away from a good headache.<br>
                 <br> WARNING:
-                <br> To change nozzle you must to heat the hot end to a temperature between 195-230°C. So, use right tool for this job, don't try to touch the heated nozzle with your bare hands.
+                <br> To change the nozzle you must heat the hot end to a temperature between 195-230°C. So, use the right tool for this job, don't try to touch the heated nozzle with your bare hands.
                 <br> There are lots of videos on youtube teaching how to proceed this change for each trademark.
             </div>
             <div class="grid-item">
@@ -149,8 +148,8 @@
                 <p>Two more tips to finish this tutorial:<br>
                 *Moisture
                 <br> Moisture affects 3d print filament, creating bubles, stringing and weak printed parts.
-                <br> After use always keep the filament inside boxes with silica gel and well sealed.
-                <br> Open new filaments only if you are going to use them, they are hermetically vacuum sealed to prevent moisture and ensure durability
+                <br> After use, always keep the filament inside  well-sealed boxes with silica gel.
+                <br> Open new filaments only if you are going to use them, they are hermetically vacuum sealed to prevent moisture and ensure durability.
                 </p>
             </div>
             <div class="grid-item">
@@ -158,24 +157,24 @@
                 <p>
                 *Speed
                 <br>Beginners have a wrong idea about that: fast speed doesn't means good job. It only applies to industrial machines of thousants of dollars, not to entrance and hobbist models.
-                <br>Speed inserts extra vibration, increase printing temperature e flow of material. And only works with several tests. There are no recipe. So be gentle and pacient with your machines
+                <br>Speed inserts extra vibration, increasing printing temperature e flow of material. And only works with several tests. There is no recipe. So be gentle and pacient with your machines.
                 <br>
                 </p>
             </div>
             <div class="grid-item">
                 <img src="./cartoon/cartoon-real4 (25).jpg" alt="">
                 <p>I hope you enjoyed this tutorial.</p>
-                <p>There are lots of information on youtube and specialized websites, all you need is search right to find</p>
+                <p>There are lots of information on youtube and specialized websites. All you need is to search right to find</p>
                 <p> See you! Bye!!</p>
             </div>
             </div>
     </div>
-    <p>Batman and all related characters are trademarks of DC Comics</p>
-    <p>Batman created by Bob Kane and Bill Finger</p>
-    <p>Joker created by Bob Kane, Bill Finger and Jerry Robinson</p>
-    <p>Superman created by Jerry Siegel and Joel Shuster</p>
-    <p>Lex Luthor created by Jerry Siegel and Joel Shuster</p>
-    <p>The Flash created by Gardner Fox and harry Lampert</p>
-    <p>The watermark showned in the images is trademark of photocarton.net</p>
+    <p>Batman and all related characters are trademarks of DC Comics.</p>
+    <p>Batman created by Bob Kane and Bill Finger.</p>
+    <p>Joker created by Bob Kane, Bill Finger and Jerry Robinson.</p>
+    <p>Superman created by Jerry Siegel and Joel Shuster.</p>
+    <p>Lex Luthor created by Jerry Siegel and Joel Shuster.</p>
+    <p>The Flash created by Gardner Fox and harry Lampert.</p>
+    <p>The watermark showned in the images is trademark of photocarton.net.</p>
 </body>
 </html>
